tests/fixtures/invalid/divmod_str_bytes.py
# Cannot call divmod() with Str, Bytes
x = divmod("hello", b"hello")
